Update CSS Theme details

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
 Theme Name: 	HTML5 Blank
-Theme URI: 		http://www.toddmotto.com/html5wp/
+Theme URI: 		http://html5blank.com
 Description: 	HTML5 Blank WordPress Theme
-Version: 		1.0
+Version: 		1.0.2
 Author: 		Todd Motto (@toddmotto)
 Author URI: 	http://www.toddmotto.com
 Tags: 			Blank, HTML5, CSS3
