CSS color tweak

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ Tags: 			Blank, HTML5, CSS3
 	
 	h1,h2,h3,h4,h5,h6 {text-decoration:none;padding:0;color:#444;margin:0;font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;font-weight:700;}
 	
-	a {color:#D31145;text-decoration:none;}
+	a {color:#266E9E;text-decoration:none;}
 	a:focus {outline:0;}
 	a:hover, a:active {outline:0;}
 	
