--- a/style.css
+++ b/style.css
@@ -9,10 +9,9 @@ Tags: 			Blank, HTML5, CSS3
 */
 
 /* =============================================================================
-   HTML5 Reset / Display Role
+   HTML5 Reset
    ========================================================================== */
 
-    /* HTML5 Boilerplate Reset */
 	article, aside, details, figcaption, figure, footer, header, hgroup, nav, section {display:block;}
 	audio, canvas, video {display:inline-block;*display:inline;*zoom:1;}
 	audio:not([controls]) {display:none;}
