Added Licence information

--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ Version: 		1.2.0
 Author: 		Todd Motto (@toddmotto)
 Author URI: 	http://www.toddmotto.com
 Tags: 			Blank, HTML5, CSS3
+
+License:		MIT
+License URI:	http://opensource.org/licenses/mit-license.php
 */
 
 /* =============================================================================
