--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
 Theme Name: 	HTML5 Blank
-Theme URI: 		http://html5blank.com
+Theme URI: 	http://html5blank.com
 Description: 	HTML5 Blank WordPress Theme
-Version: 		1.2.1
-Author: 		Todd Motto (@toddmotto)
+Version: 	1.2.2
+Author: 	Todd Motto (@toddmotto)
 Author URI: 	http://www.toddmotto.com
-Tags: 			Blank, HTML5, CSS3
+Tags: 		Blank, HTML5, CSS3
 
-License:		MIT
+License:	MIT
 License URI:	http://opensource.org/licenses/mit-license.php
 */
 
@@ -174,23 +174,25 @@ License URI:	http://opensource.org/licenses/mit-license.php
    .wp-caption.alignleft {margin:5px 20px 20px 0;}
    .wp-caption.alignright {margin:5px 0 20px 20px;}
    .wp-caption img {border:0 none;height:auto;margin:0;max-width:98.5%;padding:0;width:auto;}
-   .wp-caption p.wp-caption-text {font-size:11px;line-height:17px;margin:0;padding:0 4px 5px;}
+   .wp-caption p.wp-caption-text,.gallery-caption {font-size:11px;line-height:17px;margin:0;padding:0 4px 5px;}
+   .sticky {}
+   .bypostauthor {}
 
 /* ==========================================================================
    Print styles
    ========================================================================== */
 
-	@media print {
-		* {background:transparent !important;color:#000 !important;box-shadow:none !important;text-shadow:none !important;}
-		a,a:visited {text-decoration:underline;}
-		a[href]:after {content:" (" attr(href) ")";}
-	    abbr[title]:after {content:" (" attr(title) ")";}
-	    .ir a:after,a[href^="javascript:"]:after,a[href^="#"]:after {content:"";}
-	    pre,blockquote {border:1px solid #999;page-break-inside:avoid;}
-	    thead {display:table-header-group;}
-	    tr,img {page-break-inside:avoid;}
-	    img {max-width:100% !important;}
-	    @page {margin:0.5cm;}
-	    p,h2,h3 {orphans:3;widows:3;}
-	    h2,h3 {page-break-after:avoid;}
-	}
+   @media print {
+	* {background:transparent !important;color:#000 !important;box-shadow:none !important;text-shadow:none !important;}
+	a,a:visited {text-decoration:underline;}
+	a[href]:after {content:" (" attr(href) ")";}
+	abbr[title]:after {content:" (" attr(title) ")";}
+	.ir a:after,a[href^="javascript:"]:after,a[href^="#"]:after {content:"";}
+	pre,blockquote {border:1px solid #999;page-break-inside:avoid;}
+	thead {display:table-header-group;}
+	tr,img {page-break-inside:avoid;}
+	img {max-width:100% !important;}
+	@page {margin:0.5cm;}
+	p,h2,h3 {orphans:3;widows:3;}
+	h2,h3 {page-break-after:avoid;}
+   }
