--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	Theme Name: HTML5 Blank
 	Theme URI: http://html5blank.com
 	Description: HTML5 Blank WordPress Theme
-	Version: 1.3.1
+	Version: 1.3.2
 	Author: Todd Motto (@toddmotto)
 	Author URI: http://www.toddmotto.com
 	Tags: Blank, HTML5, CSS3
@@ -28,10 +28,7 @@
 	text-rendering:optimizeLegibility;
 }
 body {
-	font-family:'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size:11px;
-	font-weight:300;
-	line-height:18px;
+	font:300 11px/1.4 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	color:#444;
 }
 .clear {
