WAI-ARIA Landmarks, improved HTML5/accessability, v1.3.9

--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 	Theme Name: HTML5 Blank
 	Theme URI: http://html5blank.com
 	Description: HTML5 Blank WordPress Theme
-	Version: 1.3.8
+	Version: 1.3.9
 	Author: Todd Motto (@toddmotto)
-	Author URI: http://www.toddmotto.com
+	Author URI: http://toddmotto.com
 	Tags: Blank, HTML5, CSS3
 	
 	License: MIT
