--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	Theme Name: HTML5 Blank
 	Theme URI: http://html5blank.com
 	Description: HTML5 Blank WordPress Theme
-	Version: 1.3.9
+	Version: 1.4.0
 	Author: Todd Motto (@toddmotto)
 	Author URI: http://toddmotto.com
 	Tags: Blank, HTML5, CSS3
@@ -15,6 +15,7 @@
     MAIN
 \*------------------------------------*/
 
+/* global box-sizing */
 *,
 *:after,
 *:before {
@@ -29,9 +30,18 @@ body {
 	font:300 11px/1.4 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	color:#444;
 }
+/* clear */
+.clear:before,
+.clear:after {
+    content:' ';
+    display:table;
+}
+
+.clear:after {
+    clear:both;
+}
 .clear {
-	clear:both;
-	display:block;
+    *zoom:1;
 }
 img {
 	max-width:100%;
@@ -60,11 +70,35 @@ input:focus {
     STRUCTURE
 \*------------------------------------*/
 
+/* wrapper */
 .wrapper {
 	max-width:1280px;
 	width:95%;
 	margin:0 auto;
 	position:relative;
+}
+/* header */
+.header {
+	
+}
+/* logo */
+.logo {
+	
+}
+.logo-img {
+	
+}
+/* nav */
+.nav {
+	
+}
+/* sidebar */
+.sidebar {
+	
+}
+/* footer */
+.footer {
+	
 }
 
 /*------------------------------------*\
